# NetWork-Manager

./: INSTALL.md  README.md
cpp-monitor/: BUILD.md  CMakeLists.txt  network_monitor.cpp
desktop-app/src/: index.html  main.js  renderer.js  styles.css
router-backend/: api.go  go.mod
